Usuarios Controller Methods moved to service: Coupling and circular dependecy fix + CRUD Diretrizes